@@ -1,6 +1,6 @@
 copy MKIJIRO.prx MKIJIRO\MKIJIRO.prx
 copy MKIJIRO_SC.prx MKIJIRO\MKIJIRO_SC.prx
-copy MKIJIRO_POPS.prx MKIJIRO_POPS.prx
+copy MKIJIRO_POPS.prx MKIJIRO\MKIJIRO_POPS.prx
 del *.elf
 del objects\*.o
 move MKIJIRO_POPS.prx g:\seplugins\MKIJIRO_POPS.prx
